--- a/index.html
+++ b/index.html
@@ -12,7 +12,22 @@
         <label id="hills">MORRIS HILLS</label>
     </div>
     <div id="knollsCalendar" style="visibility: hidden">
-        <label>Check console for returns</label>
+        <label>Check console for returns</label><br><br>
+        <label id="event1"></label><br>
+        <label id="event2"></label><br>
+        <label id="event3"></label><br>
+        <label id="event4"></label><br>
+        <label id="event5"></label><br>
+        <label id="event6"></label><br>
+        <label id="event7"></label><br>
+        <label id="event8"></label><br>
+        <label id="event9"></label><br>
+        <label id="event10"></label><br>
+        <label id="event11"></label><br>
+        <label id="event12"></label><br>
+        <label id="event13"></label><br>
+        <label id="event14"></label><br>
+        <label id="event15"></label>
     </div>
 </body>
 </html>
