--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
         <label id="knolls" id="eagle" onclick="knollsSelected()">MORRIS KNOLLS</label>
         <label id="hills">MORRIS HILLS</label>
     </div>
-    <div id="knollsCalendar" style="visibility: hidden">
-        <label>Check console for returns</label><br><br>
-        <label id="event1"></label><br>
-        <label id="event2"></label><br>
-        <label id="event3"></label><br>
-        <label id="event4"></label><br>
-        <label id="event5"></label><br>
-        <label id="event6"></label><br>
-        <label id="event7"></label><br>
-        <label id="event8"></label><br>
-        <label id="event9"></label><br>
-        <label id="event10"></label><br>
-        <label id="event11"></label><br>
-        <label id="event12"></label><br>
-        <label id="event13"></label><br>
-        <label id="event14"></label><br>
+    <div id="knollsCalendar" style="visibility: hidden; white-space: pre">
+        <label>Check console for returns</label><br>
+        <label id="event1"></label>
+        <label id="event2"></label>
+        <label id="event3"></label>
+        <label id="event4"></label>
+        <label id="event5"></label>
+        <label id="event6"></label>
+        <label id="event7"></label>
+        <label id="event8"></label>
+        <label id="event9"></label>
+        <label id="event10"></label>
+        <label id="event11"></label>
+        <label id="event12"></label>
+        <label id="event13"></label>
+        <label id="event14"></label>
         <label id="event15"></label>
     </div>
 </body>
