--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/scrape.js"></script>
+    <script src="js/knolls.js"></script>
 </head>
 <body>
     <div class="schoolOptions">
@@ -28,6 +29,11 @@
         <label id="event13"></label>
         <label id="event14"></label>
         <label id="event15"></label>
+        <label id="event16"></label>
+        <label id="event17"></label>
+        <label id="event18"></label>
+        <label id="event19"></label>
+        <label id="event20"></label>
     </div>
 </body>
 </html>
