--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </div>
     <div id="knollsCalendar" style="visibility: hidden; white-space: pre">
         <label>Check console for returns</label><br>
+        <label id="eventQuantity">Loading...</label><br>
         <label id="event1"></label>
         <label id="event2"></label>
         <label id="event3"></label>
@@ -34,6 +35,44 @@
         <label id="event18"></label>
         <label id="event19"></label>
         <label id="event20"></label>
+        <label id="event21"></label>
+        <label id="event22"></label>
+        <label id="event23"></label>
+        <label id="event24"></label>
+        <label id="event25"></label>
+        <label id="event27"></label>
+        <label id="event28"></label>
+        <label id="event29"></label>
+        <label id="event30"></label>
+        <label id="event31"></label>
+        <label id="event32"></label>
+        <label id="event33"></label>
+        <label id="event34"></label>
+        <label id="event35"></label>
+        <label id="event36"></label>
+        <label id="event37"></label>
+        <label id="event38"></label>
+        <label id="event39"></label>
+        <label id="event40"></label>
+        <label id="event41"></label>
+        <label id="event42"></label>
+        <label id="event43"></label>
+        <label id="event44"></label>
+        <label id="event45"></label>
+        <label id="event46"></label>
+        <label id="event47"></label>
+        <label id="event48"></label>
+        <label id="event49"></label>
+        <label id="event50"></label>
+        <label id="event51"></label>
+        <label id="event52"></label>
+        <label id="event53"></label>
+        <label id="event54"></label>
+        <label id="event55"></label>
+        <label id="event56"></label>
+        <label id="event57"></label>
+        <label id="event58"></label>
+        <label id="event59"></label>
     </div>
 </body>
 </html>
