Altered labels and shows more events

--- a/index.html
+++ b/index.html
@@ -12,8 +12,33 @@
         <label id="knolls" id="eagle" onclick="knollsSelected()">MORRIS KNOLLS</label>
         <label id="hills">MORRIS HILLS</label>
     </div>
-    <div id="knollsCalendar" style="visibility: hidden; white-space: pre">
-        <label>Check console for returns</label><br>
+    <div id="knollsCalendar">
+
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div id="tempInfo" style="visibility: hidden; white-space: pre">
+        <label>Check console for misc. information</label><br>
+        <label id="calendarTime"></label>
         <label id="eventQuantity">Loading...</label><br>
         <label id="event1"></label>
         <label id="event2"></label>
@@ -73,6 +98,8 @@
         <label id="event57"></label>
         <label id="event58"></label>
         <label id="event59"></label>
+        <label id="event60"></label>
+        <label id="event61"></label>
     </div>
 </body>
 </html>
