Temporarily removed hidden atribute
GitHub doesn't like making elements visible for some reason!

--- a/index.html
+++ b/index.html
@@ -20,23 +20,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <div id="tempInfo" style="visibility: hidden; white-space: pre">
+    <div id="tempInfo" style="white-space: pre">
         <label>Check console for misc. information</label><br>
         <label id="calendarTime"></label>
         <label id="eventQuantity">Loading...</label><br>
