--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/scrape.js"></script>
     <script src="js/knolls.js"></script>
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="schoolOptions">
