--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     <div id="knollsDiv" style="display: grid; grid-template-columns: 1fr 2fr;">
         <div id=miniCalContainer>
             <div id=miniCal>
-                <div id=calSelectHeader>DECEMBER 2020</div>
+                <div id=calSelectHeader>
+                    <button>◄</button>
+                    <label>MONTH YEAR</label>
+                    <button>►</button>
+                </div>
                 <div id=calSelectDaysOfWeek>
                     <label>S</label>
                     <label>M</label>
