Added ability to change months

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div id=miniCalContainer>
             <div id=miniCal>
                 <div id=calSelectHeader>
-                    <button>◄</button>
+                    <button onclick="setDates(-1)">◄</button>
                     <label>MONTH YEAR</label>
-                    <button>►</button>
+                    <button onclick="setDates(1)">►</button>
                 </div>
                 <div id=calSelectDaysOfWeek>
                     <label>S</label>
