--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <label id="hills">MORRIS HILLS</label>
     </div>
 
-    <div id="knollsDiv" style="display: grid; grid-template-columns: 1fr 2fr;">
+    <div id="knollsDiv" style="display: grid; grid-template-columns: 1fr 2fr; margin-top: 4%;">
         <div id=miniCalContainer>
             <div id=miniCal>
                 <div id=calSelectHeader>
@@ -73,7 +73,14 @@
                 </div>
             </div>
         </div>
-        <div id=dayList style="background-color:#bbb">.</div>
+        <div id=eventList>
+            <div class=eventTemplate>
+                111
+            </div>
+            <div class=eventTemplate>
+                222
+            </div>
+        </div>
     </div>
 
 
