Updated calendar heading

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
         <div id=miniCalContainer>
             <div id=miniCal>
                 <div id=calSelectHeader>
-                    <button onclick="setDates(-1)">◄</button>
+                    <button style="float: left; padding-left: 8%;" onclick="setDates(-1)">◄</button>
                     <label>MONTH YEAR</label>
-                    <button onclick="setDates(1)">►</button>
+                    <button style="float: right; padding-right: 8%;" onclick="setDates(1)">►</button>
                 </div>
                 <div id=calSelectDaysOfWeek>
-                    <label>S</label>
-                    <label>M</label>
-                    <label>T</label>
-                    <label>W</label>
-                    <label>T</label>
-                    <label>F</label>
-                    <label>S</label>
+                    <label>SUN</label>
+                    <label>MOM</label>
+                    <label>TUE</label>
+                    <label>WED</label>
+                    <label>THU</label>
+                    <label>FRI</label>
+                    <label>SAT</label>
                 </div>
                 <div id=calSelectDays>
                     <button id=slot1></button>
@@ -74,12 +74,6 @@
             </div>
         </div>
         <div id=eventList>
-            <div class=eventTemplate>
-                111
-            </div>
-            <div class=eventTemplate>
-                222
-            </div>
         </div>
     </div>
 
