Bolded and added image. May remove.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <script src="js/knolls.js"></script>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
 </head>
-<body>
+<body style="background-image: url('img/mkfront.jpg'); background-position: center; background-size: 100%; background-attachment: fixed;">
     <div class="schoolOptions">
         <label id="knolls" id="eagle" onclick="knollsSelected()">MORRIS KNOLLS</label>
         <label id="hills">MORRIS HILLS</label>
