--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         <label id="hills">MORRIS HILLS</label>
     </div>
 
-    <div id="knollsDiv" style="display: grid; grid-template-columns: 1fr 2fr; margin-top: 4%;">
+    <div id="knollsDiv" style="display: grid; grid-template-columns: 1fr 2fr; margin-top: 4%; margin-left: 4%;">
         <div id=miniCalContainer>
             <div id=miniCal>
-                <div id=calSelectHeader>
+                <div id=calHeader>
                     <button style="float: left; padding-left: 8%;" onclick="setDates(-1)">◄</button>
                     <label>MONTH YEAR</label>
                     <button style="float: right; padding-right: 8%;" onclick="setDates(1)">►</button>
                 </div>
-                <div id=calSelectDaysOfWeek>
+                <div id=calDaysOfWeek>
                     <label>SUN</label>
                     <label>MOM</label>
                     <label>TUE</label>
@@ -34,7 +34,7 @@
                     <label>FRI</label>
                     <label>SAT</label>
                 </div>
-                <div id=calSelectDays>
+                <div id=calDays>
                     <button id=slot1></button>
                     <button id=slot2></button>
                     <button id=slot3></button>
