--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <label id="hills">MORRIS HILLS</label>
     </div>
 
-    <div id="knollsDiv" style="display: grid; grid-template-columns: 1fr 2fr; margin-top: 4%; margin-left: 4%;">
+    <div id="knollsDiv" style="display: grid; grid-template-columns: 1fr 2fr; margin: 4vw 4vw 0 4vw;">
         <div id=miniCalContainer>
             <div id=miniCal>
                 <div id=calHeader>
@@ -74,6 +74,12 @@
             </div>
         </div>
         <div id=eventList>
+            <div class=eventTemplate id=e0>
+                <div class=previewEvent id=pe0>
+                    <span class = pEventDate id=ped0>TEMP XX</span>
+                    <span class = pEventName id=pen0>Christmas Example</span>
+                </div>
+            </div>
         </div>
     </div>
 
