--- a/index.html
+++ b/index.html
@@ -74,11 +74,12 @@
             </div>
         </div>
         <div id=eventList>
-            <div class=eventTemplate id=e0>
-                <div class=previewEvent id=pe0>
-                    <span class = pEventDate id=ped0>TEMP XX</span>
-                    <span class = pEventName id=pen0>Christmas Example</span>
+            <div class=pEventHead>
+                <div class=pEventLeft id=e0>
+                    <label class=pEventDate id=ped0>TEMP XX</label>
+                    <label class=pEventName id=pen0>Christmas Example</label>
                 </div>
+                <div class=pEventRight>VIRTUAL</div>
             </div>
         </div>
     </div>
