--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
                     <span class=pEventName id=pen0>Christmas Example</span>
                     <label class=pEventStatus>STATUS</label>
                 </span>
+                <div class=eventInfo id=ei0>
+                    <div class=eWarning><label class=eWarningLabel>Status message placeholder</label></div>
+                    <label class=eExtraDates>Jan 1 to Jan 5</label>
+                    <label class=eStartTime>XX:00</label>
+                    <label class=eRoom>BXX</label>
+                    <label class=eDesc></label>
+                </div>
             </div>
         </div>
     </div>
