--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/scrape.js"></script>
     <script src="js/knolls.js"></script>
+    <script src="js/descriptions.js"></script>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
@@ -83,8 +84,9 @@
                 <div class=eventInfo id=ei0>
                     <div class=eWarning><label class=eWarningLabel>Status message placeholder</label></div>
                     <label class=eExtraDates>Jan 1 to Jan 5</label>
-                    <label class=eStartTime>XX:00</label>
+                    <label class=eTimes>XX:00</label>
                     <label class=eRoom>BXX</label>
+                    <label class=eDescHeading>About</label>
                     <label class=eDesc></label>
                 </div>
             </div>
