Updated HTML index

--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
                     <button id=slot35></button>
                 </div>
             </div>
+            <div id=optionsContainer>
+                <div id=selectMode style="margin-right: 1%;">
+                    <button id=clickSelect onclick="toggleOption('mode')">CLICK</button>
+                    <button id=hoverSelect onclick="toggleOption('mode')">HOVER</button>
+                </div>
+                <div id=selectTheme style="margin-left: 1%;">
+                    <button id=lightSelect onclick="toggleOption('theme')">LIGHT</button>
+                    <button id=darkSelect onclick="toggleOption('theme')">DARK</button>
+                </div>
+            </div>
         </div>
         <div id=eventList>
             <div class=eventTemplate id=e0>
