--- a/index.html
+++ b/index.html
@@ -96,20 +96,12 @@
                     <label class=eExtraDates>Jan 1 to Jan 5</label>
                     <label class=eTimes>XX:00</label>
                     <label class=eRoom>BXX</label>
-                    <label class=eDescHeading>About</label>
-                    <label class=eDesc></label>
+                    <!-- <label class=eDescHeading>About</label>-->
+                    <!-- <label class=eDesc></label>-->
                 </div>
             </div>
         </div>
     </div>
-
-
-
-    <div id="tempInfo" style="white-space: pre">
-
-    </div>
-
-
 
     <script type="text/javascript">
         $("#knollsDiv").hide();
