--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div id="knollsDiv" style="display: grid; grid-template-columns: 1fr 3fr; margin: 4vw 4vw 0 4vw;">
         <div id=miniCalContainer>
-            <div id=miniCal>
+            <div id=miniCal class=miniCal-light>
                 <div id=calHeader>
                     <button style="float: left; padding-left: 8%;" onclick="setDates(-1)">◄</button>
                     <label>MONTH YEAR</label>
@@ -74,13 +74,11 @@
                 </div>
             </div>
             <div id=optionsContainer>
-                <div id=selectMode style="margin-right: 1%;">
-                    <button id=clickSelect onclick="toggleOption('mode')">CLICK</button>
-                    <button id=hoverSelect onclick="toggleOption('mode')">HOVER</button>
+                <div id=selectDiv class=selectDiv-light style="margin-right: 1%;">
+                    <button id=selectButton onclick="toggleOption('mode')">MODE</button>
                 </div>
-                <div id=selectTheme style="margin-left: 1%;">
-                    <button id=lightSelect onclick="toggleOption('theme')">LIGHT</button>
-                    <button id=darkSelect onclick="toggleOption('theme')">DARK</button>
+                <div id=themeDiv class=themeDiv-light style="margin-left: 1%;">
+                    <button id=themeButton onclick="toggleOption('theme')">THEME</button>
                 </div>
             </div>
         </div>
