--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
 </head>
-<body onload="load()">
+<body onload="load()" style="transition: 0.5s;">
     <div class="schoolOptions">
         <label id="knolls" id="eagle" onclick="knollsSelected()">MORRIS KNOLLS</label>
         <label id="hills">MORRIS HILLS</label>
@@ -21,12 +21,12 @@
     <div id="knollsDiv" style="display: grid; grid-template-columns: 1fr 3fr; margin: 4vw 4vw 0 4vw;">
         <div id=miniCalContainer>
             <div id=miniCal class=miniCal-light>
-                <div id=calHeader>
-                    <button style="float: left; padding-left: 8%;" onclick="setDates(-1)">◄</button>
+                <div id=calHeader class=calHeader-light>
+                    <button class=calHeaderArrow-light style="float: left; padding-left: 8%;" onclick="setDates(-1)">◄</button>
                     <label>MONTH YEAR</label>
-                    <button style="float: right; padding-right: 8%;" onclick="setDates(1)">►</button>
+                    <button class=calHeaderArrow-light style="float: right; padding-right: 8%;" onclick="setDates(1)">►</button>
                 </div>
-                <div id=calDaysOfWeek>
+                <div id=calDaysOfWeek class=calDaysOfWeek-light>
                     <label>SUN</label>
                     <label>MOM</label>
                     <label>TUE</label>
@@ -75,10 +75,10 @@
             </div>
             <div id=optionsContainer>
                 <div id=selectDiv class=selectDiv-light style="margin-right: 1%;">
-                    <button id=selectButton onclick="toggleOption('mode')">MODE</button>
+                    <button id=selectButton onclick="toggleOption('mode')">mTemp</button>
                 </div>
                 <div id=themeDiv class=themeDiv-light style="margin-left: 1%;">
-                    <button id=themeButton onclick="toggleOption('theme')">THEME</button>
+                    <button id=themeButton onclick="toggleOption('theme')">t temp</button>
                 </div>
             </div>
         </div>
